@@ -36,16 +36,16 @@
 ** string_const("...", len):
 **	Given a C string literal and its length, returns a Mercury string.
 */
-#define string_const(string, len) ((String) string)
+#define MR_string_const(string, len) ((String) string)
 
 /*
 ** bool string_equal(ConstString s1, ConstString s2):
 **	Return true iff the two Mercury strings s1 and s2 are equal.
 */
-#define string_equal(s1,s2) (strcmp((char*)(s1),(char*)(s2))==0)
+#define MR_string_equal(s1,s2) (strcmp((char*)(s1),(char*)(s2))==0)
 
 /* 
-** void make_aligned_string(ConstString & ptr, const char * string):
+** void MR_make_aligned_string(ConstString & ptr, const char * string):
 **	Given a C string `string', set `ptr' to be a Mercury string
 **	with the same contents.  (`ptr' must be an lvalue.)
 **	If the resulting Mercury string is to be used by Mercury code,
@@ -61,16 +61,16 @@
 ** Otherwise, allocate space on the heap and copy the C string to
 ** the Mercury string.
 */
-#define make_aligned_string(ptr, string) 				\
+#define MR_make_aligned_string(ptr, string) 				\
 	do { 								\
 	    if (MR_tag((Word) (string)) != 0) {				\
-		make_aligned_string_copy((ptr), (string));		\
+		MR_make_aligned_string_copy((ptr), (string));		\
 	    } else { 							\
 	    	(ptr) = (string);					\
 	    }								\
 	} while(0)
 
-/* void make_aligned_string_copy(ConstString &ptr, const char * string);
+/* void MR_make_aligned_string_copy(ConstString &ptr, const char * string);
 **	Same as make_aligned_string(ptr, string), except that the string
 **	is guaranteed to be copied. This is useful for copying C strings
 **	onto the Mercury heap.
@@ -80,7 +80,7 @@
 ** rather than inside Mercury code, you may need to call
 ** save/restore_transient_hp().
 */
-#define make_aligned_string_copy(ptr, string) 				\
+#define MR_make_aligned_string_copy(ptr, string) 			\
 	do {								\
 		Word make_aligned_string_tmp;				\
 		char * make_aligned_string_ptr;				\
